RESOLVED FIXED218085
UIClient isn't notified when page muted state changes
https://bugs.webkit.org/show_bug.cgi?id=218085
Summary UIClient isn't notified when page muted state changes
Eric Carlson
Reported 2020-10-22 09:31:53 PDT
r267081 broke the UIClient page muted state notification.
Attachments
Patch (15.17 KB, patch)
2020-10-22 10:02 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2020-10-22 09:32:30 PDT
Eric Carlson
Comment 2 2020-10-22 10:02:25 PDT
EWS
Comment 3 2020-10-22 11:36:43 PDT
Committed r268878: <https://trac.webkit.org/changeset/268878> All reviewed patches have been landed. Closing bug and clearing flags on attachment 412110 [details].
Note You need to log in before you can comment on or make changes to this bug.